@startuml
'https://plantuml.com/class-diagram

object main
package 框架 {
    interface Product {
        {abstract}Use()
    }
    interface FactoryImpl {
        {abstract}CreateProduct()
        {abstract}RegisterProduct()
    }
    abstract class Factory {
        FactoryImpl
        Create()
    }
}
package 具体加工 {
    class IDCard {
        owner
        Use()
        GetOwner()
    }
    class IDCardFactory {
        owners
        CreateProduct()
        RegisterProduct()
        GetOwners()
    }
}

main --> Factory: Uses >
Factory -> Product: Creates >
Factory *--> FactoryImpl
FactoryImpl <|.. IDCardFactory
IDCardFactory -> IDCard: Creates >
Product <|.. IDCard

@enduml